Fix dragging on mobile

--- a/src/contestants/ContestantItem.module.css
+++ b/src/contestants/ContestantItem.module.css
@@ -12,6 +12,9 @@
   touch-action: manipulation;
   backdrop-filter: blur(3px);
   text-transform: uppercase;
+  font-family: 'Audiowide', cursive;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 .draw {
   display: block;
