--- a/src/utils/SortableItem.module.css
+++ b/src/utils/SortableItem.module.css
@@ -1,3 +1,6 @@
+.sortableItem {
+  touch-action: none;
+}
 .idle {
   cursor: grab;
 }
